# gobject-hello

./: .gitignore  Makefile.am  README.md  config.h  configure.ac
src/: hello-person.c  hello-person.h  hello-root.c  hello-root.h  hello.h  main.c
